bix fixes
