# docs/swagger.json
@@ -490,15 +490,6 @@
                     "quest"
                 ],
                 "summary": "Получение всех опросов",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Access token (с биркой)",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    }
-                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -536,12 +527,49 @@
                     "quest"
                 ],
                 "summary": "Получение всех опросов со статусами",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.QuestWithStatuses"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.Error"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.Error"
+                        }
+                    }
+                }
+            }
+        },
+        "/quest-service/quest/by-user/with-statuses/{id}": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "quest"
+                ],
+                "summary": "Получение опросов по ID пользователя со статусами",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Access token (с биркой)",
-                        "name": "Authorization",
-                        "in": "header",
+                        "description": "ID пользователя",
+                        "name": "id",
+                        "in": "path",
                         "required": true
                     }
                 ],
@@ -551,7 +579,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/models.QuestWithStatuses"
+                                "$ref": "#/definitions/models.QuestWithStatusesForUser"
                             }
                         }
                     },
@@ -588,13 +616,6 @@
                         "description": "ID пользователя",
                         "name": "id",
                         "in": "path",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Access token (с биркой)",
-                        "name": "Authorization",
-                        "in": "header",
                         "required": true
                     }
                 ],
@@ -650,49 +671,6 @@
                         "description": "Access token (с биркой)",
                         "name": "Authorization",
                         "in": "header",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/models.Quest"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/models.Error"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/models.Error"
-                        }
-                    }
-                }
-            }
-        },
-        "/quest-service/quest/delete/{id}": {
-            "delete": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "quest"
-                ],
-                "summary": "Удаление опроса по ID (нельзя удалить, используйте hide :3)",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "ID опроса",
-                        "name": "id",
-                        "in": "path",
                         "required": true
                     }
                 ],
@@ -780,13 +758,6 @@
                         "name": "id",
                         "in": "path",
                         "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Access token (с биркой)",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
                     }
                 ],
                 "responses": {
@@ -829,13 +800,6 @@
                         "description": "ID опроса",
                         "name": "id",
                         "in": "path",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Access token (с биркой)",
-                        "name": "Authorization",
-                        "in": "header",
                         "required": true
                     }
                 ],
@@ -880,13 +844,6 @@
                         "name": "id",
                         "in": "path",
                         "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Access token (с биркой)",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
                     }
                 ],
                 "responses": {
@@ -930,13 +887,6 @@
                         "name": "id",
                         "in": "path",
                         "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Access token (с биркой)",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
                     }
                 ],
                 "responses": {
@@ -944,105 +894,6 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/models.QuestResponse"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/models.Error"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/models.Error"
-                        }
-                    }
-                }
-            }
-        },
-        "/quest-service/result/by-quest-and-team/{id_quest}/{id_team}": {
-            "get": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "result"
-                ],
-                "summary": "Получение результатов по ID опроса и ID команды",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "ID опроса",
-                        "name": "id_quest",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "ID команды",
-                        "name": "id_team",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/models.Result"
-                            }
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/models.Error"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/models.Error"
-                        }
-                    }
-                }
-            }
-        },
-        "/quest-service/result/by-quest/{id}": {
-            "get": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "result"
-                ],
-                "summary": "Получение результатов по ID опроса",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "ID опроса",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/models.Result"
-                            }
                         }
                     },
                     "400": {
@@ -1713,10 +1564,13 @@
                 "idQuest": {
                     "type": "integer"
                 },
+                "idQuestTemplate": {
+                    "type": "integer"
+                },
                 "name": {
                     "type": "string"
                 },
-                "percent": {
+                "progress": {
                     "type": "integer"
                 },
                 "startAt": {
@@ -1739,6 +1593,9 @@
                 "idQuest": {
                     "type": "integer"
                 },
+                "idQuestTemplate": {
+                    "type": "integer"
+                },
                 "indicators": {
                     "type": "array",
                     "items": {
@@ -1748,7 +1605,7 @@
                 "name": {
                     "type": "string"
                 },
-                "percent": {
+                "progress": {
                     "type": "integer"
                 },
                 "startAt": {
@@ -1771,10 +1628,51 @@
                 "idQuest": {
                     "type": "integer"
                 },
+                "idQuestTemplate": {
+                    "type": "integer"
+                },
                 "name": {
                     "type": "string"
                 },
-                "percent": {
+                "progress": {
+                    "type": "integer"
+                },
+                "startAt": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "string"
+                },
+                "teams": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.TeamWithStatus"
+                    }
+                }
+            }
+        },
+        "models.QuestWithStatusesForUser": {
+            "type": "object",
+            "properties": {
+                "available": {
+                    "type": "boolean"
+                },
+                "endAt": {
+                    "type": "string"
+                },
+                "idQuest": {
+                    "type": "integer"
+                },
+                "idQuestTemplate": {
+                    "type": "integer"
+                },
+                "isPass": {
+                    "type": "boolean"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "progress": {
                     "type": "integer"
                 },
                 "startAt": {
@@ -1803,10 +1701,13 @@
                 "idQuest": {
                     "type": "integer"
                 },
+                "idQuestTemplate": {
+                    "type": "integer"
+                },
                 "name": {
                     "type": "string"
                 },
-                "percent": {
+                "progress": {
                     "type": "integer"
                 },
                 "startAt": {
@@ -1835,6 +1736,9 @@
                 "idQuest": {
                     "type": "integer"
                 },
+                "idQuestTemplate": {
+                    "type": "integer"
+                },
                 "indicators": {
                     "type": "array",
                     "items": {
@@ -1844,7 +1748,7 @@
                 "name": {
                     "type": "string"
                 },
-                "percent": {
+                "progress": {
                     "type": "integer"
                 },
                 "startAt": {
@@ -2034,7 +1938,7 @@
                 "name": {
                     "type": "string"
                 },
-                "status": {
+                "progress": {
                     "type": "boolean"
                 }
             }
