# models/quest.model.go
@@ -44,6 +44,19 @@ type QuestWithStatuses struct {
 	Teams      []*TeamWithStatus `json:"teams"`
 }
 
+type QuestWithStatusesForUser struct {
+	IdQuest    int               `json:"idQuest"`
+	IdTemplate int               `json:"idQuestTemplate"`
+	Name       string            `json:"name"`
+	StartAt    string            `json:"startAt"`
+	EndAt      string            `json:"endAt"`
+	Percent    int               `json:"progress"`
+	Status     string            `json:"status"`
+	IsPass     bool              `json:"isPass"`
+	Available  bool              `json:"available"`
+	Teams      []*TeamWithStatus `json:"teams"`
+}
+
 type QuestWithIndicators struct {
 	IdQuest    int                          `json:"idQuest"`
 	IdTemplate int                          `json:"idQuestTemplate"`
