# routes/quest.route.go
@@ -12,9 +12,9 @@ func Quest(baseGroup *gin.RouterGroup) {
 	group.GET("/with-users/:id", controllers.Quest.GetWithUsers)
 	group.GET("/with-users-and-indicators/:id", controllers.Quest.GetWithUsersAndIndicators)
 	group.GET("/by-user/with-indicators/:id", controllers.Quest.GetByUserIdWithIndicators)
+	group.GET("/by-user/with-statuses/:id", controllers.Quest.GetByUserIdWithStatuses)
 	group.GET("/all", controllers.Quest.GetAll)
 	group.GET("/all/with-statuses", controllers.Quest.GetAllWithStatuses)
 	group.POST("/create", controllers.Quest.Create)
 	group.PUT("/hide/:id", controllers.Quest.Hide)
-	group.DELETE("/delete/:id", controllers.Quest.Delete)
 }
